--- a/tango_with_django/templates/rango/index.html
+++ b/tango_with_django/templates/rango/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 {% load staticfiles %}
 <html>
-<head>
-	<title>Index</title>
-</head>
-<body>
-	<h1>Rango says</h1>
-	<div>
-		<p>Hey there partner!</p><br>
-		<strong>{{ boldmessage }}</strong><br>
-	</div>
-	<div>
-		<a href="/rango/about">About</a>
-		<img src="{% static "rango/images/rango.jpg"%}">
-	</div>
-</body>
+	<head>
+		<title>Rango</title>
+	</head>
+	<body>
+		<h1>Rango says</h1>
+		<div>
+			<p>Hey there partner!</p><br>
+			<strong>{{ boldmessage }}</strong><br>
+		</div>
+		<div>
+			{% if categories %}
+				<ul>
+					{% for category in categories %}
+						<li>{{ category.name }}</li>
+					{% endfor %}
+				</ul>
+			{% else %}
+				<strong>There are no categories present</strong>
+			{% endif %}
+		</div>
+		<div>
+			<a href="/rango/about">About</a>
+			<img src="{% static "rango/images/rango.jpg"%}">
+		</div>
+	</body>
 </html>
